# llm_core

./: -p  .gitignore  CMakeLists.txt  README.md
cmake/: DetectSIMD.cmake
doc/: 3B模型扩展计划与验证.md  CUDA后端实现报告.md  GGUF解析器实现报告.md  Hunyuan_Dense推理调研与实现报告.md  LLaMA量化推理实现报告.md  Phase10_优化详解.md  Qwen2_DeepSeek推理实现报告.md  benchmark.md  修改方案.md  加速设计.md  性能优化报告.md  推理引擎设计方案.md  推理流程.md  项目骨架说明.md
include/axonforge/: backend.hpp  common.hpp  dtype.hpp  engine.hpp  graph.hpp  kv_cache.hpp  memory.hpp  sampler.hpp  tensor.hpp  version.hpp.in
include/axonforge/models/: gpt2.hpp  hunyuan_dense.hpp  llama.hpp  llama_cuda.hpp  qwen2.hpp
src/: CMakeLists.txt  engine.cpp
src/backend/: CMakeLists.txt  backend_registry.cpp
src/backend/cpu_x86/: CMakeLists.txt  cpu_arena.cpp  cpuid.cpp  cpuid.hpp  x86_backend.cpp
src/backend/cpu_x86/kernels/: elementwise_avx2.cpp  gemm_avx2.cpp  gemm_int8_vnni.cpp  gemv_f16_avx2.cpp  gemv_lut_avx2.cpp  gemv_lut_avx512.cpp  gemv_q4k_avx2.cpp  gemv_q4k_q8_avx2.cpp  gemv_q4k_q8_avxvnni.cpp  gemv_q4k_r8_avx2.cpp  gemv_q4k_r8_avxvnni.cpp  gemv_q6k_avx2.cpp  gemv_q6k_q8_avx2.cpp  norm_avx2.cpp  q8_block.hpp  quant_q8_avx2.cpp
src/backend/cuda/: CMakeLists.txt  cuda_backend.cu  cuda_kernels.cu  cuda_kernels.hpp
src/core/: CMakeLists.txt  fuse_pass.cpp  graph.cpp  liveness.cpp  shape_infer.cpp  tensor.cpp  thread_pool.hpp
src/loader/: CMakeLists.txt  gguf_loader.cpp  gguf_reader.hpp
src/models/: CMakeLists.txt  gpt2_model.cpp  hunyuan_dense_model.cpp  llama_cuda_model.cpp  llama_model.cpp  qwen2_model.cpp
src/tokenizer/: CMakeLists.txt  bpe_tokenizer.cpp
tests/: CMakeLists.txt  test_backend_cuda.cpp  test_backend_x86.cpp  test_gguf_reader.cpp  test_graph.cpp  test_tensor.cpp
tools/: convert_ggml_gpt2_to_gguf.py
tools/cli/: CMakeLists.txt  bpe_compare.py  check_quant.py  check_special_tokens.py  check_template.py  check_tok_ids.py  check_vocab.py  compare_logits.py  debug_tokenize.py  main.cpp  patch_main.py  render_template.py  run_llamacpp.sh  test_chat_ids.py  test_short_prompt.py
